--- a/Example/webserviceManager/Base.lproj/Main.storyboard
+++ b/Example/webserviceManager/Base.lproj/Main.storyboard
@@ -1,30 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="webserviceManager_Example" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestWS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mh-nd-Vll">
+                                <rect key="frame" x="10" y="60" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="23t-oO-GiY"/>
+                                    <constraint firstAttribute="height" constant="30" id="FQa-1G-89m"/>
+                                </constraints>
+                                <state key="normal" title="Get"/>
+                                <connections>
+                                    <action selector="btnGet_Clicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BqR-x3-3a0"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QMJ-i1-hTB">
+                                <rect key="frame" x="305" y="60" width="60" height="30"/>
+                                <state key="normal" title="Post"/>
+                                <connections>
+                                    <action selector="btnPost_Clicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xuw-Jz-SaR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vqV-tN-d3l">
+                                <rect key="frame" x="241" y="178" width="124" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="124" id="QlE-h1-h7M"/>
+                                </constraints>
+                                <state key="normal" title="PostWithDelegate"/>
+                                <connections>
+                                    <action selector="btnPostDelegate_Clicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fzP-WN-ANo"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DAH-Tv-IV8">
+                                <rect key="frame" x="10" y="178" width="118" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="eTT-kO-eTp"/>
+                                    <constraint firstAttribute="width" constant="118" id="ocP-HZ-Uh5"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="sy3-Os-oqM"/>
+                                </constraints>
+                                <state key="normal" title="GetWithDelegate"/>
+                                <connections>
+                                    <action selector="btnGetDelegate_Clicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EeR-Pg-QcY"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="QMJ-i1-hTB" firstAttribute="height" secondItem="4mh-nd-Vll" secondAttribute="height" id="0Sl-gk-rUF"/>
+                            <constraint firstItem="QMJ-i1-hTB" firstAttribute="width" secondItem="4mh-nd-Vll" secondAttribute="width" id="43J-8r-p3A"/>
+                            <constraint firstItem="QMJ-i1-hTB" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-10" id="FDl-FT-xqD"/>
+                            <constraint firstItem="DAH-Tv-IV8" firstAttribute="top" secondItem="4mh-nd-Vll" secondAttribute="bottom" constant="88" id="J5d-DO-ya8"/>
+                            <constraint firstItem="vqV-tN-d3l" firstAttribute="centerY" secondItem="DAH-Tv-IV8" secondAttribute="centerY" id="M03-JW-BAl"/>
+                            <constraint firstItem="DAH-Tv-IV8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="TNe-O5-Hk0"/>
+                            <constraint firstAttribute="trailing" secondItem="vqV-tN-d3l" secondAttribute="trailing" constant="10" id="cBL-MT-36A"/>
+                            <constraint firstItem="4mh-nd-Vll" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="o1A-Cz-kVy"/>
+                            <constraint firstItem="QMJ-i1-hTB" firstAttribute="centerY" secondItem="4mh-nd-Vll" secondAttribute="centerY" id="rhp-HS-GMa"/>
+                            <constraint firstItem="vqV-tN-d3l" firstAttribute="height" secondItem="DAH-Tv-IV8" secondAttribute="height" id="smV-qF-dbK"/>
+                            <constraint firstItem="4mh-nd-Vll" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="wKw-p1-Kmh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
